--- a/app/views/order_quote_clients/edit.html.erb
+++ b/app/views/order_quote_clients/edit.html.erb
@@ -1,2 +1,2 @@
-<h1>OrderQuoteClients#edit</h1>
-<p>Find me in app/views/order_quote_clients/edit.html.erb</p>
+<h1>Modifier devis</h1>
+<%= render partial: 'form' %>
