--- a/app/views/order_quote_clients/index.html.erb
+++ b/app/views/order_quote_clients/index.html.erb
@@ -259,7 +259,6 @@
 			<button class="square-button bg-transparent bg-hover-white no-border"><a href="<%= destroy_user_session_path %>" data-method="delete"><span class="mif-exit"></span></a></button>
 			<button class="square-button bg-transparent bg-hover-white no-border" onclick="showCharms('#charmSettings')"><span class="mif-cog"></span></button>
 		</div>
-		
 		<div class="tile-group double">
       <h3>Information Client</h3>
       <div class="tile-container">
@@ -282,7 +281,6 @@
         </div>
       </div>
     </div>
-		
 	  <div class="tile-group double">
 	    <h3>Information Projet</h3>
 	    <div class="tile-container">
@@ -306,21 +304,17 @@
         <span class="v-align-bottom">Choix d'une gamme</span>
         <br>
         <div class="input-control select">
-          <select>
-            <option>bas de gamme</option>
-            <option>moyen de gamme</option>
-            <option>haut de gamme</option>
-          </select>
+        	<% @projets.each do |p| %>
+						<%= p.collection_select :project_modular_house_id, @projets, :id, :projectName%>
+          <% end %>
         </div>
         <br>
         <span class="v-align-bottom">Choix d'un model de gamme</span>
         <br>
         <div class="input-control select">
-          <select>
-            <option>bas de gamme</option>
-            <option>moyen de gamme</option>
-            <option>haut de gamme</option>
-          </select>
+        	<% @orders.each do |order| %>
+						<%= collection_select :order_id, :payment, @ProjectModularHouses.map(&:OrderQuoteClient), :id, :projectName %>
+          <% end %>
         </div>
         <br>
         <span class="v-align-bottom">Adresse</span>
@@ -332,4 +326,9 @@
     </div>
     
 	</div>
+	
+    </thead>
+    <tbody>
+ 
+
 </html>
