--- a/app/assets/stylesheets/client.scss
+++ b/app/assets/stylesheets/client.scss
@@ -1,3 +1,28 @@
 // Place all the styles related to the client controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+html, body {
+  height: 100%;
+}
+body {
+}
+.page-content {
+  padding-top: 3.125rem;
+  min-height: 100%;
+  height: 100%;
+}
+.table .input-control.checkbox {
+  line-height: 1;
+  min-height: 0;
+  height: auto;
+}
+
+@media screen and (max-width: 800px){
+  #cell-sidebar {
+    flex-basis: 52px;
+  }
+  #cell-content {
+    flex-basis: calc(100% - 52px);
+  }
+}
