--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -8,45 +8,18 @@
   <%= stylesheet_link_tag    'metro', media: 'all', 'data-turbolinks-track'=> 'reload' %>
   <%= stylesheet_link_tag    'metro-icons', media: 'all', 'data-turbolinks-track'=> 'reload' %>
   <%= stylesheet_link_tag    'metro-responsive', media: 'all', 'data-turbolinks-track'=> 'reload' %>
+  
+  <%= stylesheet_link_tag    'client', media: 'all', 'data-turbolinks-track'=> 'reload' %>
 
   <%= javascript_include_tag 'jquery-2.1.3.min', 'data-turbolinks-track'=> 'reload' %>
   <%= javascript_include_tag 'jquery.dataTables.min', 'data-turbolinks-track'=> 'reload' %>
 
   <link rel='shortcut icon' type='image/x-icon' href='../favicon.ico' />
-  <style>
-    html, body {
-      height: 100%;
-    }
-    body {
-    }
-    .page-content {
-      padding-top: 3.125rem;
-      min-height: 100%;
-      height: 100%;
-    }
-    .table .input-control.checkbox {
-      line-height: 1;
-      min-height: 0;
-      height: auto;
-    }
-
-    @media screen and (max-width: 800px){
-      #cell-sidebar {
-        flex-basis: 52px;
-      }
-      #cell-content {
-        flex-basis: calc(100% - 52px);
-      }
-    }
-  </style>
+  
 </head>
 
 <div class="app-bar fixed-top" data-role="appbar">
-  <a class="app-bar-element branding">Madera</a>
-  <span class="app-bar-divider"></span>
-  <ul class="app-bar-menu">
-    <li><a href="<%= authenticated_root_path %>">Menu</a></li>
-  </ul>
+  <a href="<%= authenticated_root_path %>" class="app-bar-element branding">Madera</a>
 
   <div class="app-bar-element place-right">
     <span class="mif-cog"></span> <%= current_user.firstname %> <%= current_user.lastname %>
@@ -88,7 +61,7 @@
             <td><%= client.firstNameClient %></td>
             <td><%= client.clientName %></td>
             <td>
-              <a href="<%= clients_path(client.id) %>" class="fa fa-eye fa-2x"></a>
+              <a href="<%= client_path(client.id) %>" class="fa fa-eye fa-2x"></a>
               <a href="<%= edit_client_path(client.id) %>" class="fa fa-pencil fa-2x"></a>
               <a href="<%= client_path(client.id) %>" class="fa fa-trash fa-2x" data-confirm="Etes sur sûr ?" data-method="delete"></a>
             </td>
