--- a/app/views/insulatings/_form.html.erb
+++ b/app/views/insulatings/_form.html.erb
@@ -1,25 +1,48 @@
-<%= form_for @insulating do |f| %>
-
-<div class="form-group">
-    <%= f.label :insulatingName, 'nom isolant :' %><br />
-    <%= f.text_field :insulatingName, class: 'form-control' %>
-</div>
-
-<div class="form-group">
-    <%= f.label :insulatingThickness, 'épaisseur isolant:' %><br />
-    <%= f.text_field :insulatingThickness, class: 'form-control'%>
-</div>
-
-<div class="form-group">
-    <%= f.label :priceInsulating, 'Tarif isolant:' %><br />
-    <%= f.text_field :priceInsulating, class: 'form-control'%>
-</div>
-
-
-
-
-<div class="form-group">
-    <button class="btn btn-primary", type="submit">Valider</button>
-</div>
-
-<% end %>
+<!DOCTYPE html>
+<html>
+    <titre><% provide(:title, "Ajout d'un isolant") %></titre>
+    
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+        
+        <%= stylesheet_link_tag    'metro', media: 'all', 'data-turbolinks-track'=> 'reload' %>
+        <%= stylesheet_link_tag    'metro-icons', media: 'all', 'data-turbolinks-track'=> 'reload' %>
+        <%= stylesheet_link_tag    'metro-responsive', media: 'all', 'data-turbolinks-track'=> 'reload' %>
+        <%= javascript_include_tag 'jquery-2.1.3.min', 'data-turbolinks-track'=> 'reload' %>
+        <%= javascript_include_tag 'metro', 'data-turbolinks-track'=> 'reload' %>
+        
+        <link rel='shortcut icon' type='image/x-icon' href='../favicon.ico' />
+    </head>
+    
+    <div class="app-bar fixed-top" data-role="appbar">
+      <a href="<%= authenticated_root_path %>" class="app-bar-element branding">Madera</a>
+    
+      <div class="app-bar-element place-right">
+        <span class="mif-cog"></span> <%= current_user.firstname %> <%= current_user.lastname %>
+      </div>
+      
+    </div>
+        <%= form_for @insulating, :html => {:class => 'align-center'} do |f| %>
+        
+        <div class="form-group">
+            <%= f.label :insulatingName, 'Nom isolant :' %><br />
+            <%= f.text_field :insulatingName, class: 'form-control' %>
+        </div>
+        
+        <div class="form-group">
+            <%= f.label :insulatingThickness, 'Epaisseur isolant:' %><br />
+            <%= f.text_field :insulatingThickness, class: 'form-control'%>
+        </div>
+        
+        <div class="form-group">
+            <%= f.label :priceInsulating, 'Tarif isolant:' %><br />
+            <%= f.text_field :priceInsulating, class: 'form-control'%>
+        </div>
+        
+        <div class="form-group">
+            <button class="button loading-pulse lighten primary", type="submit">Valider</button>
+        </div>
+    <% end %>
+</html>
