--- a/app/views/components/_form.html.erb
+++ b/app/views/components/_form.html.erb
@@ -41,7 +41,7 @@
 
 <div class="form-group">
     <%= f.label :unitUse_id, 'Unité usage: '%><br />
-    <%= f.collection_select :unitUse_id, UniteUse.all, :id, :unitUseName%>
+    <%= f.collection_select :unite_use_id, UniteUse.all, :id, :unitUseName%>
 </div>
 
 <div class="form-group">
