--- a/app/views/components/show.html.erb
+++ b/app/views/components/show.html.erb
@@ -2,7 +2,7 @@
 
 <%= @component.componentNature %>
 <%= @component.provider_id %>
-<%= @component.unitUse_id %>
+<%= @component.unite_use_id %>
 <%= @component.modulus.ids %>
 <p>
     <a href="<%= components_path %>" class ="btn btn-info">revenir</a>
