--- a/app/views/gallery/index.html.erb
+++ b/app/views/gallery/index.html.erb
@@ -7,6 +7,12 @@
 		
 		<%= stylesheet_link_tag    'gallery', media: 'all', 'data-turbolinks-track'=> 'reload' %>
 	</head>
+	    <div class="cell auto-size padding20 bg-white" id="cell-content">
+      <h1 class="text-light">Ajouter un fournisseur<span class="mif-users place-right"></span></h1>
+        <hr class="thin bg-grayLighter">
+            <button class="button primary"><a href="<%= authenticated_root_path %>"><span class="mif-plus"></span> Retour</a></button>
+        <hr class="thin bg-grayLighter">
+    </div>
 
 <header>
 <div><img src="http://img4.hostingpics.net/thumbs/mini_370235Maison1.jpg" alt></div>
