--- a/app/views/modulus/_form.html.erb
+++ b/app/views/modulus/_form.html.erb
@@ -91,7 +91,7 @@
 
 <div class="form-group">
     <%= f.label :unitUse_id, 'Unité de mesure : '%><br />
-    <%= f.collection_select :unitUse_id, UniteUse.all, :id, :unitUseName%>
+    <%= f.collection_select :unite_use_id, UniteUse.all, :id, :unitUseName%>
 </div>
 
 
