--- a/app/views/project_modular_houses/_form.html.erb
+++ b/app/views/project_modular_houses/_form.html.erb
@@ -1,3 +1,10 @@
+    <div class="cell auto-size padding20 bg-white" id="cell-content">
+      <h1 class="text-light">Ajouter un fournisseur<span class="mif-users place-right"></span></h1>
+        <hr class="thin bg-grayLighter">
+            <button class="button primary"><a href="<%= authenticated_root_path %>"><span class="mif-plus"></span> Retour</a></button>
+        <hr class="thin bg-grayLighter">
+    </div>
+
 <%= form_for @projet do |f| %>
 <div class="form-group">
     <%= f.label :projectName, 'Nom du projet :' %><br />
