--- a/app/views/project_modular_houses/index.html.erb
+++ b/app/views/project_modular_houses/index.html.erb
@@ -42,7 +42,7 @@
 </head>
 
 <div class="app-bar fixed-top" data-role="appbar">
-  <a class="app-bar-element branding">Madera</a>
+  <a href="<%= authenticated_root_path %>" class="app-bar-element branding">Retour</a>
   <span class="app-bar-divider"></span>
 
   <div class="app-bar-element place-right">
